--- a/EnglishAPPDemo/Base.lproj/Main.storyboard
+++ b/EnglishAPPDemo/Base.lproj/Main.storyboard
@@ -1204,6 +1204,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="5n7-Or-QzB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bJg-a5-EFx" userLabel="First Responder" sceneMemberID="firstResponder"/>
